--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/btsImage1"
+            android:src="@drawable/bts_1"
+            android:layout_width="130dp"
+            android:layout_height="130dp"/>
+
+        <ImageView
+            android:src="@drawable/bts_2"
+            android:layout_width="130dp"
+            android:layout_height="130dp"/>
+
+        <ImageView
+            android:src="@drawable/bts_3"
+            android:layout_width="130dp"
+            android:layout_height="130dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp">
+
+        <ImageView
+            android:src="@drawable/bts_4"
+            android:layout_width="130dp"
+            android:layout_height="130dp"/>
+
+        <ImageView
+            android:src="@drawable/bts_5"
+            android:layout_width="130dp"
+            android:layout_height="130dp"/>
+
+        <ImageView
+            android:src="@drawable/bts_6"
+            android:layout_width="130dp"
+            android:layout_height="130dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp">
+
+        <ImageView
+            android:src="@drawable/bts_7"
+            android:layout_width="130dp"
+            android:layout_height="130dp"/>
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
